--- a/templates/404.html
+++ b/templates/404.html
@@ -3,17 +3,15 @@
 {% block content %}
 
 <!--404 error page-->
-<div class="container about-page">
-
-    <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
-            <h3>404 (page not found)</h3>
-            <p class="lead">Ooops something went wrong.
+<div class="container py-5">
+    <div class="row pb-5">
+        <div class="col-md-8 mt-3 offset-md-2 pb-5">
+            <h1>404 (page not found)</h1>
+            <div class="py-4"><p class="lead"><span class="fw-bold"> Aw snap </span>something went wrong!</div>
                 Please click on the link below to go back to the homepage
-                <a class="navbar-brand" href="{% url 'index' %}"><span class="brand">Link</span></a>
+                <div class="py-4 m-1"><a  href="{% url 'index' %}">Link</a></div>
             </p>
         </div>
     </div>
-
 </div>
 {%endblock%}
