--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,21 @@
 <!--landing page content-->
 {% block content %}
 {% load static %}
-<div class="container my-5">
-        <img class="img-fluid" src="{% static '/images/hero-image.jpg' %}" alt="Image of poutine with Canadian flag">
-</div>
+
+<!--Showcase landing-->
+<section class="mt-2 pt-5 text-center">
+        <div class="bg-image text-center my-5">
+                <h1 class="display-2">Welcome to Curdine</h1>
+                <div id="content" class="container mt-5">
+                        <p class="lead text-muted">We are bringing the popular Canadian dish to you in Ireland! It's packet full with all
+                                the things that you love and know well.</p>
+                 </div>
+        </div>
+</section>
+<!--Landing image-->
+<section class="text-center">
+        <img class="img-fluid p-2" src="{% static '/images/hero-image.jpg' %}" alt="Image of poutine with Canadian flag">
+</section>
+
+
 {% endblock %}
