--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
@@ -67,7 +68,7 @@
         {% endblock content %}
     </main>
     <!--Contact and Map-->
-    <div class="container mt-5">
+    <div class="container my-5">
         <div class="row g-4">
             <div class="col-md">
                 <h2 class="text-center mb-4">Contact Info</h2>
@@ -90,7 +91,7 @@
         </div>
     </div>
     <!--Footer-->
-    <footer class="p-3 mt-5 text-white text-center">
+    <footer class="pt-3 mt-3 text-white text-center">
         <div class="container">
             <p class="lead">Copyright &copy; 2022 Curdine</p>
         </div>
