--- a/templates/menu.html
+++ b/templates/menu.html
@@ -9,17 +9,18 @@
                 {% for food_item in food_item_list%}
                 <div class="col-md-4">
                     <div class="card mb-4">
-                            <a href="{% url 'food_item' food_item.slug %}">
-                                <div class="image-container">
+                            <a class="text-decoration-none text-dark" href="{% url 'food_item' food_item.slug %}">
+                                <div class="image-container text-center">
                                 {% if "placeholder" in food_item.food_image.url %}
-                                <img src="https://images.pexels.com/photos/1583884/pexels-photo-1583884.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Image of the food item" class="card-img-top">
+                                <img src="https://images.pexels.com/photos/1583884/pexels-photo-1583884.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Image of the food item" class="card-img-top img-fluid">
                                 {% else %}
-                                <img src="{{food_item.food_image.url}}" alt="Image of the food item" class="card-image-top img-fluid">
+                                <img src="{{food_item.food_image.url}}" alt="Image of the food item" class="card-image-top w-100 rounded">
                                 {% endif %}
                                 </div>
-                            </a>
+                            
                             <div class="card-body">
                                 <h2 class="card-title">{{ food_item }}</h2>
+                            </a>
                                 <p class="card-text">{{ food_item.description }}</p>
                                 <p class="card-text">&euro;{{ food_item.price }}</p>
                             </div>
@@ -30,7 +31,6 @@
             {% endfor %}
             </div>
         </div>
-    
     {% if is_paginated %}
     <nav aria-label="Page navigation">
         <ul class="pagination pagination-lg justify-content-center">
