--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,8 @@
-/* Landing page*/
+body {
+    overflow-x: hidden !important;
+}
 
+/* Landing page*/
 #navbar,
 footer {
     background-color: #aad4b3;
@@ -33,3 +36,47 @@ footer {
 .bi-trash-fill {
     color: red;
 }
+
+
+/* Hover on sign up and menu button*/
+.signup, .menubtn{
+    border-radius: 4px;
+    background-color: #aad4b3;
+    border: none;
+    color: #fff;
+    text-align: center;
+    font-size: 32px;
+    padding: 16px;
+    width: 220px;
+    transition: all 0.5s;
+    cursor: pointer;
+
+    box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7);
+  }
+  
+  .signup, .menubtn{
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .signup:after, .menubtn:after{
+    content: '»';
+    position: absolute;
+    opacity: 0;  
+    top: 14px;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .signup:hover, .menubtn:hover{
+    padding-right: 24px;
+    padding-left:8px;
+    color:black;
+  }
+  
+  .signup:hover:after, .menubtn:hover:after{
+    opacity: 1;
+    right: 10px;
+  }
