--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+        <script
+        src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
+        integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA="
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
@@ -19,7 +22,7 @@
     <!--Navbar-->
     <nav id="navbar" class="navbar navbar-expand-lg py-3 fixed-top">
         <div class="container">
-            <a href="{% url 'index' %}" class="navbar-brand text-white">Curdine</a>
+            <a href="{% url 'index' %}" class="navbar-brand">Curdine</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -47,7 +50,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="{% url 'update_profile' %}">Update Profile</a>
-                            <div class="dropdown-divider"></div>   
+                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
                         </div>
                     </li>
@@ -85,13 +88,13 @@
                 </ul>
             </div>
             <div class="col-md">
-                <div id="map">
+                <div id="map" aria-label="Map of Springfield IL" alt="Google Map image of Springfield IL">
                 </div>
             </div>
         </div>
     </div>
     <!--Footer-->
-    <footer class="pt-3 mt-3 text-white text-center">
+    <footer class="pt-3 mt-3 text-center">
         <div class="container">
             <p class="lead">Copyright &copy; 2022 Curdine</p>
         </div>
